--- a/exercicio1.html
+++ b/exercicio1.html
@@ -7,6 +7,13 @@
     <h1>Bem vindo</h1>
     <b>Meu nome é Thiago</b>
     <br>Eu gosto de programar
-    <img src="foto.jpg" alt="Foto">
+    <img src="foto-thiago.png" alt="Foto">
+     <ul>
+        <li><a href="exercicio1.html">Exercício 1</a></li>
+        <li><a href="exercicio2.html">Exercício 2</a></li>
+        <li><a href="exercicio3.html">Exercício 3</a></li>
+        <li><a href="exercicio4.html">Exercício 4</a></li>
+    </ul>
 </body>
+
 </html>
