--- a/exercicio2.html
+++ b/exercicio2.html
@@ -34,6 +34,12 @@
                     <p>Criação de aplicativos móveis multiplataforma utilizando React Native e Flutter.</p>
                 </li>
             </ol>
+            <ul>
+                <li><a href="exercicio1.html">Exercício 1</a></li>
+                <li><a href="exercicio2.html">Exercício 2</a></li>
+                <li><a href="exercicio3.html">Exercício 3</a></li>
+                <li><a href="exercicio4.html">Exercício 4</a></li>
+            </ul>
         </section>
     </main>
     <footer>
@@ -41,4 +47,5 @@
         <p>Telefone: <strong>(11) 99999-9999</strong></p>
     </footer>
 </body>
+
 </html>
