--- a/exercicio3.html
+++ b/exercicio3.html
@@ -21,6 +21,12 @@
         <iframe width="110" height="200" src="https://www.myinstants.com/instant/som-do-zap-zap-estourado-15594/embed/" frameborder="0" scrolling="no"></iframe>
         <figcaption>Áudio de teste para demonstração.</figcaption>
     </figure>
+     <ul>
+        <li><a href="exercicio1.html">Exercício 1</a></li>
+        <li><a href="exercicio2.html">Exercício 2</a></li>
+        <li><a href="exercicio3.html">Exercício 3</a></li>
+        <li><a href="exercicio4.html">Exercício 4</a></li>
+    </ul>
 
     <!-- Vídeo -->
     <figure>
@@ -31,4 +37,5 @@
         <figcaption>Vídeo de teste para demonstração.</figcaption>
     </figure>
 </body>
+
 </html>
