--- a/exercicio4.html
+++ b/exercicio4.html
@@ -74,6 +74,12 @@
             <li><a href="https://www.example.com/noticia-bateria-10-anos" target="_blank">Startup desenvolve bateria que dura 10 anos</a></li>
             <li><a href="https://www.example.com/noticia-robos-assistentes" target="_blank">Robôs assistentes chegam ao mercado doméstico</a></li>
             </ul>
+              <ul>
+            <li><a href="exercicio1.html">Exercício 1</a></li>
+            <li><a href="exercicio2.html">Exercício 2</a></li>
+            <li><a href="exercicio3.html">Exercício 3</a></li>
+            <li><a href="exercicio4.html">Exercício 4</a></li>
+        </ul>
         </aside>
     </main>
     <footer>
@@ -81,3 +87,4 @@
     </footer>
 </body>
 </html>
+
