--- a/exercicio1.html
+++ b/exercicio1.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Bem vindo</h1>
     <b>Meu nome é Thiago</b>
-    <br>Eu gosto de programar
+    <br>Eu gosto de programar front-end
     <img src="foto-thiago.png" alt="Foto">
      <ul>
         <li><a href="exercicio1.html">Exercício 1</a></li>
@@ -17,3 +17,4 @@
 </body>
 
 </html>
+
